--- a/app/src/main/res/layout/mobile_activity_main.xml
+++ b/app/src/main/res/layout/mobile_activity_main.xml
@@ -68,10 +68,10 @@
         android:id="@+id/txt_status"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/not_connected"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_start"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_start" />
 
     <Button
@@ -219,5 +219,17 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/laft_controls" />
+
+    <ImageButton
+        android:id="@+id/btn_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/setting_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/txt_status"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:srcCompat="@android:drawable/ic_menu_manage"
+        tools:ignore="RedundantDescriptionCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
